# aktin-framework-operational-analytics

./: .gitignore  README.md  pyproject.toml
derived/: chart_edis.csv  csv_yearly_encounter.csv  linechart_connected_eds.csv  txt_node_updates.txt
resources/: modified_releases.csv  releases.csv
src/: charts_edis.py  choropleth_state_coverage.py  csv_yearly_encounter.py  heatmap_broker_connection.py  linechart_connected_eds.py  timeline_releases.py  txt_node_updates.py
src/helper/: download_and_aggregate_broker_results.py  download_confluence_resources.py  paths.py
